--- a/style.css
+++ b/style.css
@@ -3,26 +3,32 @@
   padding: 0%;
 }
 
+@font-face {
+  font-family: 'myFont';
+  src: url(./Font/digital.ttf);
+}
+
 html,
 body {
   display: grid;
   height: 100%;
   justify-content: center;
   align-items: center;
-  background-color: #100e24;
-  font-size: 30px;
-  color: #e6fbfc;
-  /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-  font-family: Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: #C4DFDF;
+  font-size: 40px;
+  color: #62bde7b1;
+  text-shadow: 3px 2px 10px #62bde7b1;
+  font-family: 'myFont';
 }
 
 #clock {
   background-image: url(./img/3.jpg);
-  border: 2px solid white;
-  box-shadow: 0px 0px 20px #e6fbfc;
-  width: 330px;
-  height: 100px;
-  padding: 12% 0px;
+  border: 3px solid #62bde7b1;
+  box-shadow: 0px 0px 20px #62bde7b1;
+  border-radius: 70px 10px;
+  width: 8rem;
+  height: 80px;
+  padding: 13% 0px;
   text-align: center;
   background-repeat: no-repeat;
 }
